--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name_dev" translatable="false">AegisDev</string>
     <string name="org_name_full" translatable="false">Beem Development</string>
     <string name="action_settings">Settings</string>
+    <string name="action_linked_browsers">Linked Browsers</string>
     <string name="action_about">About</string>
     <string name="action_import">Import</string>
     <string name="action_delete">Delete</string>
@@ -152,6 +153,8 @@
     <string name="unlock_vault_error_description">Incorrect password. Make sure you didn\'t mistype your password.</string>
     <string name="password_equality_error">Passwords should be identical and non-empty</string>
     <string name="snackbar_authentication_method">Please select an authentication method</string>
+    <string name="linking_browser">Linking browser</string>
+    <string name="linking_browser_error">Linking browser failed</string>
     <string name="encrypting_vault">Encrypting the vault</string>
     <string name="exporting_vault">Exporting the vault</string>
     <string name="reading_file">Reading file</string>
@@ -371,6 +374,7 @@
     <string name="pref_pin_keyboard_summary">Enable this if you want to enable the PIN keyboard on the lockscreen. This only works for numeric passwords</string>
 
     <string name="title_activity_preferences">Settings</string>
+    <string name="title_activity_linked_browsers">Linked Browsers</string>
     <string name="title_activity_manage_groups">Manage groups</string>
     <string name="title_activity_transfer">Transfer entries</string>
     <string name="title_activity_about">About</string>
