--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,24 @@
     <string name="pref_set_password_title">Change password</string>
     <string name="pref_set_password_summary">Set a new password which you will need to unlock your vault</string>
 
+    <string name="pref_section_easytfa">EasyTFA</string>
+    <string name="pref_section_easytfa_summary">Enable and configure the EasyTFA connection</string>
+    <string name="pref_cat_easytfa_general">General</string>
+    <string name="pref_cat_easytfa_browser">Browser</string>
+    <string name="pref_cat_easytfa_server">Server</string>
+    <string name="pref_easytfa_enabled">Enable EasyTFA</string>
+    <string name="pref_easytfa_enabled_summary">Enable this to connect to the relay</string>
+    <string name="pref_easytfa_firebase_enabled">Enable Firebase</string>
+    <string name="pref_easytfa_firebase_enabled_summary">Firebase is required for EasyTFA notifications</string>
+    <string name="pref_easytfa_browser_link">Link Browser</string>
+    <string name="pref_easytfa_browser_link_summary">Link a new browser</string>
+    <string name="pref_easytfa_browser_linked">View Linked Browsers</string>
+    <string name="pref_easytfa_browser_linked_summary">View and manage your linked browsers</string>
+    <string name="pref_easytfa_server_url">Server URL</string>
+    <string name="pref_easytfa_server_url_summary">Set a custom relay server</string>
+    <string name="pref_easytfa_server_test">Test connection</string>
+    <string name="pref_easytfa_server_test_summary">Test your connection to the server</string>
+
     <string name="export_encrypted">Encrypt the vault</string>
     <string name="export_help">This action will export the vault out of Aegis\' internal storage. Select the format you\'d like your export to be in:</string>
     <string name="export_warning_unencrypted">You are about to export an unencrypted copy of your Aegis vault. <b>This is not recommended</b>.</string>
