--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,7 +88,7 @@
     <string name="pref_set_password_summary">Set a new password which you will need to unlock your vault</string>
 
     <string name="pref_section_easytfa">EasyTFA</string>
-    <string name="pref_section_easytfa_summary">Enable and configure the EasyTFA connection</string>
+    <string name="pref_section_easytfa_summary">Enable and configure the EasyTFA connection.</string>
     <string name="pref_cat_easytfa_general">General</string>
     <string name="pref_cat_easytfa_browser">Browser</string>
     <string name="pref_cat_easytfa_server">Server</string>
@@ -104,6 +104,9 @@
     <string name="pref_easytfa_server_url_summary">Set a custom relay server</string>
     <string name="pref_easytfa_server_test">Test connection</string>
     <string name="pref_easytfa_server_test_summary">Test your connection to the server</string>
+    <string name="pref_easytfa_unlink_all_browsers">Unlink all Browsers</string>
+    <string name="pref_easytfa_unlink_all_browsers_summary">Remove all linked browsers</string>
+    <string name="pref_easytfa_unlink_all_browsers_dialog">Are you sure you want to unlink all browsers? This will prevent all currently linked browser extensions from making new requests until they are relinked.</string>
 
     <string name="export_encrypted">Encrypt the vault</string>
     <string name="export_help">This action will export the vault out of Aegis\' internal storage. Select the format you\'d like your export to be in:</string>
