--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -322,6 +322,7 @@
     <string name="search">Search</string>
     <string name="channel_name_lock_status">Lock status</string>
     <string name="channel_description_lock_status">Aegis can create a persistent notification to notify you when the vault is locked</string>
+    <string name="channel_name_easytfa">EasyTFA</string>
     <string name="vault_unlocked_state">Vault is unlocked. Tap here to lock.</string>
     <string name="version">Version</string>
     <string name="changelog">Changelog</string>
